[package]
name = "quant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = "0.13", features = ["rayon"]}
ndarray-linalg = { version = "0.12", features = ["intel-mkl"]}
rand = "0.8.0"
rand_distr = "0.4.3"
rayon = "1.5.3"
